--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   	"angular":"1.4.0-beta.1",
   	"jquery":"~2.1.3",
   	"bootstrap":"3.3.2",
-        "polymer": "Polymer/polymer#~0.5.4"
+    "polymer": "Polymer/polymer#~0.5.4",
+  	"slick-carousel": "1.4.1"
   }
 }
