--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies":{
   	"angular":"1.4.0-beta.1",
+  	"angular-sanitize":"1.4.0-beta.1",
   	"jquery":"~2.1.3",
   	"bootstrap":"3.3.2",
     "polymer": "Polymer/polymer#~0.5.4",
